# MWIS_weather_scraping

./: README.md  get_data.py  pyproject.toml
